--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,6 @@
     <title>Hello Coursera!</title>
   </head>
   <body>
-    <h1>Hello Coursera!</h1>
+    <h1>Hello Coursera! This chaper sucked!</h1>
   </body>
 </html>
